clean factorypath before generating so it does not append

--- a/testing-impl/build.gradle
+++ b/testing-impl/build.gradle
@@ -30,6 +30,7 @@ tasks.register('ensureDirectory') {
 }
 
 tasks.eclipse.dependsOn('ensureDirectory')
+tasks.eclipse.dependsOn('cleanEclipse')
 
 dependencies {
     api project(':testing-api')
